--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-multiselect": "^2.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
