--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^2.5.17",
+    "vue-js-modal": "^1.3.26",
     "vue-multiselect": "^2.1.3"
   },
   "devDependencies": {
