--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "test": "npm run build"
   },
   "dependencies": {
+    "alpha-sort": "^2.0.1",
     "vue": "^2.5.17",
     "vue-js-modal": "^1.3.26",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-multiselect": "^2.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
+    "@vue/cli-plugin-babel": "^3.1.0",
+    "@vue/cli-plugin-eslint": "^3.1.3",
+    "@vue/cli-service": "^3.1.1",
     "@vue/eslint-config-prettier": "^3.0.5",
     "vue-template-compiler": "^2.5.17"
   },
