--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
   "dependencies": {
     "alpha-sort": "^2.0.1",
     "vue": "^2.5.17",
-    "vue-js-modal": "^1.3.26",
-    "vue-material": "^1.0.0-beta-10.2",
-    "vue-multiselect": "^2.1.3"
+    "vue-material": "^1.0.0-beta-10.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.0",
-    "@vue/cli-plugin-eslint": "^3.1.3",
-    "@vue/cli-service": "^3.1.1",
+    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-plugin-eslint": "^3.1.4",
+    "@vue/cli-service": "^3.1.3",
     "@vue/eslint-config-prettier": "^3.0.5",
     "vue-template-compiler": "^2.5.17"
   },
