--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "npm run build"
+    "test": "npm run build",
+    "start": "npm run serve"
   },
   "dependencies": {
     "alpha-sort": "^2.0.1",
@@ -18,6 +19,7 @@
     "@vue/cli-plugin-eslint": "^3.1.4",
     "@vue/cli-service": "^3.1.3",
     "@vue/eslint-config-prettier": "^3.0.5",
+    "postcss-preset-env": "^6.4.0",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -42,7 +44,7 @@
   },
   "postcss": {
     "plugins": {
-      "autoprefixer": {}
+      "postcss-preset-env": {}
     }
   },
   "browserslist": [
