--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-service": "^3.1.3",
     "@vue/eslint-config-prettier": "^3.0.5",
     "postcss-preset-env": "^6.4.0",
+    "prettier": "^1.14.3",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -31,16 +32,17 @@
       "plugin:vue/essential",
       "@vue/prettier"
     ],
-    "rules": {
-      "no-console": 0
-    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
   },
   "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "bracketSpacing": false,
     "semi": false,
-    "printWidth": 180
+    "trailingComma": "none"
   },
   "postcss": {
     "plugins": {
