--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "alpha-sort": "^2.0.1",
+    "lodash": "^4.17.11",
     "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2"
   },
@@ -46,6 +47,9 @@
       "plugin:vue/essential",
       "@vue/prettier"
     ],
+    "rules": {
+      "no-console": "warn"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
