--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "alpha-sort": "^2.0.1",
     "lodash": "^4.17.11",
     "vue": "^2.5.17",
-    "vue-material": "^1.0.0-beta-10.2"
+    "vue-material": "^1.0.0-beta-10.2",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
