--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --fix",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test": "npm run build",
     "start": "npm run serve"
