--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "vue",
+  "name": "study-guide-frontend-input",
   "version": "0.0.0",
   "description": "Frontend for teachers",
   "license": "MIT",
@@ -19,7 +19,7 @@
   "dependencies": {
     "alpha-sort": "^2.0.1",
     "lodash": "^4.17.11",
-    "vue": "^2.5.17",
+    "vue": "^2.5.20",
     "vue-material": "^1.0.0-beta-10.2",
     "vuelidate": "^0.7.4"
   },
@@ -27,10 +27,10 @@
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-eslint": "^3.2.1",
     "@vue/cli-service": "^3.2.0",
-    "@vue/eslint-config-prettier": "^3.0.5",
+    "@vue/eslint-config-prettier": "^4.0.0",
     "postcss-preset-env": "^6.4.0",
     "prettier": "^1.15.3",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.20"
   },
   "scripts": {
     "serve": "vue-cli-service serve",
